--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -195,6 +195,7 @@ jobs:
 
   examples:
     runs-on: ${{ vars.RUNNER }}
+    if: false
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -210,7 +211,7 @@ jobs:
       - name: Run examples
         env:
           RUST_BACKTRACE: 1
-          RUST_LOG: info
+          RUST_LOG: info,cctp_bridge=debug
           ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
           EVM_SECRET_KEY: ${{ secrets.EVM_SECRET_KEY }}
           TEST_PRIVATE_KEY: ${{ secrets.TEST_PRIVATE_KEY }}
