--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -44,7 +44,8 @@ jobs:
                - Check API documentation accuracy
 
             Provide detailed feedback using inline comments for specific issues.
-            Use top-level comments for general observations or praise.
+            Use top-level comments for general observations or praise, but do not praise individual lines of code.
+            Do not be shy, I am a big boy and can handle criticism gracefully. I welcome feedback and suggestions.
 
           # Tools for comprehensive PR review
           claude_args: |
