feat: split burn and recv functions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,8 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
+      - dependency-name: "bincode*"
       - dependency-name: "solana*"
       - dependency-name: "spl-*"
-      - dependency-name: "*"
+      - dependency-name: ".*"
         update-types: ["version-update:semver-major"]
