--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -1,12 +1,12 @@
 name: PR Review
 
 on:
-  workflow_dispatch:
-#  pull_request:
-#    types: [opened, synchronize, ready_for_review, reopened]
+  pull_request:
+    types: [opened, synchronize, ready_for_review, reopened]
 
 jobs:
   review-with-tracking:
+    if: contains(github.event.pull_request.labels.*.name, 'jobtaker')
     runs-on: ${{ vars.RUNNER }}
     permissions:
       contents: read
