--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,5 @@ updates:
       - dependency-name: "bincode*"
       - dependency-name: "solana*"
       - dependency-name: "spl-*"
-      - dependency-name: ".*"
+      - dependency-name: "*"
         update-types: ["version-update:semver-major"]
