--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ solana-signature = "2"
 solana-signer = "2"
 spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
 thiserror = "2"
+tokio = { version = "1", default-features = false, features = ["time"] }
 tracing = "0.1"
 
 [dev-dependencies]
